--- a/app/src/main/res/layout/activity_rehber.xml
+++ b/app/src/main/res/layout/activity_rehber.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="2px"
     android:paddingRight="2px"
     android:paddingTop="2px"
-    tools:context=".RehberActivity">
+    tools:context=".activity.RehberActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
