--- a/app/src/main/res/layout/activity_rehber_icerik.xml
+++ b/app/src/main/res/layout/activity_rehber_icerik.xml
@@ -13,6 +13,24 @@
         app:layout_constraintGuide_percent="0.2" />
 
     <TextView
+    android:layout_width="0px"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="50dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginStart="50dp"
+    android:ems="10"
+    app:layout_constraintBottom_toTopOf="@+id/guideline"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    android:id="@+id/lbl_adSoyad"
+    android:text="Onur Barman"
+    android:textAlignment="center"
+    android:textColor="@color/colorAccent"
+    android:textSize="30dp"
+    android:fontFamily="sans-serif"/>
+
+    <TextView
         android:layout_width="0px"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
@@ -20,14 +38,16 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="50dp"
         android:ems="10"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintBottom_toTopOf="@+id/lbl_aransinMi"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_adSoyad"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/lbl_adSoyad"
-        android:text="Onur Barman"
+        android:id="@+id/lbl_telefon"
+        android:text="555444333"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="30dp"
+        android:textColor="@color/colorYes"
+        android:textSize="20dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"/>
 
     <TextView
@@ -41,7 +61,7 @@
         android:ems="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_telefon"
         android:id="@+id/lbl_aransinMi"
         android:text="Aransın Mı?"
         android:textAlignment="center"
@@ -52,7 +72,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,7 +88,7 @@
             android:textColor="@color/colorPrimary" />
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnHayir"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
